// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CclSearchBlock Check search block edit 1`] = `
<div
  className="home-datasets-container"
>
  <div
    className="ccl-container"
  >
    <h3>
      Test title!
    </h3>
    <div
      className="home-datasets-search"
    >
      <form
        className="ccl-form search-form"
      >
        <input
          aria-label="Search datasets"
          className="ccl-text-input"
          id="home_search_datasets"
          name="homeSearchDatasets"
          placeholder="Search datasets"
          type="text"
        />
        <button
          aria-label="Search"
          className="ccl-button"
          type="submit"
        >
          <span
            className="ccl-icon-zoom"
          />
        </button>
      </form>
    </div>
    <div
      className="home-datasets-text"
    >
      <span>
        More than 999 datasets in our 
      </span>
      <a
        href="/"
        onClick={[Function]}
      >
        Dataset catalogue
      </a>
    </div>
  </div>
</div>
`;

exports[`CclSearchBlock Check search block view 1`] = `
<div
  className="home-datasets-container"
>
  <div
    className="ccl-container"
  >
    <h3>
      Test title!
    </h3>
    <div
      className="home-datasets-search"
    >
      <form
        className="ccl-form search-form"
      >
        <input
          aria-label="Search datasets"
          className="ccl-text-input"
          id="home_search_datasets"
          name="homeSearchDatasets"
          placeholder="Search datasets"
          type="text"
        />
        <button
          aria-label="Search"
          className="ccl-button"
          type="submit"
        >
          <span
            className="ccl-icon-zoom"
          />
        </button>
      </form>
    </div>
    <div
      className="home-datasets-text"
    >
      <span>
        More than 999 datasets in our 
      </span>
      <a
        href="/"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
